Analyzing Transfer transactions too

--- a/PlutoWallet/Components/TransactionAnalyzer/AnalyzedOutcomeView.xaml
+++ b/PlutoWallet/Components/TransactionAnalyzer/AnalyzedOutcomeView.xaml
@@ -29,7 +29,7 @@
                         <Label.FormattedText>
                             <FormattedString>
                                 <Span FontAttributes="Bold"
-                                      TextColor="White"
+                                      TextColor="Black"
                                       Text="{Binding Loading}" />
                             </FormattedString>
 
