--- a/PlutoWallet/Components/Buttons/BasicGrayButton.xaml
+++ b/PlutoWallet/Components/Buttons/BasicGrayButton.xaml
@@ -2,7 +2,7 @@
 <Button xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.Buttons.BasicGrayButton"
-        BackgroundColor="#e9e9e9"
+        BackgroundColor="{x:StaticResource PrimaryGray}"
         TextColor="Black"
         FontAttributes="Bold"
         CornerRadius="15">
