--- a/PlutoWallet/Components/Card/Card.xaml
+++ b/PlutoWallet/Components/Card/Card.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlutoWallet.Components.Card.Card">
+             x:Class="PlutoWallet.Components.Card.Card"
+             ZIndex="10">
     <Border
             HorizontalOptions="Center"
             VerticalOptions="Center"
@@ -22,6 +23,9 @@
                     Opacity="0.1" />
 
         </Border.Shadow>
+        <Border.GestureRecognizers>
+            <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+        </Border.GestureRecognizers>
         <!--BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"-->
         <ContentView x:Name="contentView"
                      HorizontalOptions="Center"
