--- a/PlutoWallet/Components/Identity/IdentityAddressView.xaml
+++ b/PlutoWallet/Components/Identity/IdentityAddressView.xaml
@@ -8,10 +8,10 @@
             BackgroundColor="{AppThemeBinding Light=#fdfdfd, Dark=#0a0a0a}"
             x:Name="border"
             Padding="0, 0, 0, 0">
-        <Border.Shadow> 
+        <Border.Shadow>
             <Shadow Brush="Black"
                     Offset="0,2" 
-                    Radius="3"
+                    Radius="20"
                     Opacity="0.1" />
 
         </Border.Shadow>
@@ -23,16 +23,34 @@
                         AbsoluteLayout.LayoutFlags="All"
                         Padding="10, 0, 10, 0">
 
-            <Image AbsoluteLayout.LayoutBounds="0, 10, 20, 20"
-                    x:Name="identityJundgementIcon"
-                    Source="{AppThemeBinding Light=unknownblack.png, Dark=unknownwhite.png}" />
-            <Label AbsoluteLayout.LayoutBounds="0, 0, 1, 40"
-                    AbsoluteLayout.LayoutFlags="WidthProportional"
-                    VerticalTextAlignment="Center"
-                    Margin="25, 0, 0, 0"
-                    x:Name="identityLabel"
-                    TextColor="{AppThemeBinding Light=Black, Dark=White}"
-                    Text="Unknown" />
+            <Grid AbsoluteLayout.LayoutBounds="0, 0, 1, 40"
+                    AbsoluteLayout.LayoutFlags="WidthProportional">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40"/>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="40" />
+                </Grid.ColumnDefinitions>
+                <Image 
+                        x:Name="identityJundgementIcon"
+                        Source="{AppThemeBinding Light=unknownblack.png, Dark=unknownwhite.png}"
+                       Grid.Column="0"
+                       Margin="10"/>
+                <Label VerticalTextAlignment="Center"
+                        x:Name="identityLabel"
+                        TextColor="{AppThemeBinding Light=Black, Dark=White}"
+                        Text="Unknown"
+                       Grid.Column="1"/>
+                <Image 
+                        x:Name="subscanIcon"
+                        Source="subscanicon.png"
+                       Grid.Column="2"
+                       Margin="10">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnSubscanClicked" />
+                    </Image.GestureRecognizers>
+                </Image>
+            </Grid>
+
 
             <Entry Placeholder="Address / AZERO.ID"
                     AbsoluteLayout.LayoutBounds="0, 40, 1, 40"
@@ -41,7 +59,7 @@
                     x:Name="addressEntry"
                     TextColor="{AppThemeBinding Light=Black, Dark=White}"
                     PropertyChanged="OnEntryPropertyChanged"
-                   IsSpellCheckEnabled="false"
+                    IsSpellCheckEnabled="false"
                     IsTextPredictionEnabled="false"/>
 
             <!--QR code button-->
@@ -52,7 +70,7 @@
                 Source="{AppThemeBinding Light=qrcodeblack.png, Dark=qrcodewhite.png}"
                 Margin="5, 5, 5, 5"
                 >
-            
+
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Tapped="OnShowQRClicked" />
 
