--- a/PlutoWallet/Components/AssetSelect/AssetSelectButtonView.xaml
+++ b/PlutoWallet/Components/AssetSelect/AssetSelectButtonView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.AssetSelect.AssetSelectButtonView"
              WidthRequest="{Binding WidthRequest}">
-    <Border BackgroundColor="{x:StaticResource Primary}">
+    <Border BackgroundColor="{x:StaticResource Primary}"
+            Stroke="{x:StaticResource Primary}">
         <Border.StrokeShape>
             <RoundRectangle CornerRadius="15" />
 
