--- a/PlutoWallet/Components/Balance/UsdBalanceView.xaml
+++ b/PlutoWallet/Components/Balance/UsdBalanceView.xaml
@@ -8,8 +8,7 @@
     <card:Card>
         <card:Card.View>
             <AbsoluteLayout  AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
-                             x:Name="absoluteLayout"
-                             >
+                             x:Name="absoluteLayout">
 
                 <VerticalStackLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
                     
