--- a/PlutoWallet/Components/CustomLayouts/CustomLayoutItemDragger.xaml
+++ b/PlutoWallet/Components/CustomLayouts/CustomLayoutItemDragger.xaml
@@ -4,8 +4,8 @@
              xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.CustomLayouts.CustomLayoutItemDragger"
              HeightRequest="60">
-        <card:Card>
-            <card:Card.View>
+        <card:ClickableCard>
+            <card:ClickableCard.View>
                 <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                                 AbsoluteLayout.LayoutFlags="All"
                                 Margin="0, 10, 0, 10">
@@ -48,7 +48,7 @@
 
                     </AbsoluteLayout>
                 </AbsoluteLayout>
-            </card:Card.View>
-        </card:Card>
+            </card:ClickableCard.View>
+        </card:ClickableCard>
 </ContentView>
 
