--- a/PlutoWallet/Components/CustomLayouts/PlusItemView.xaml
+++ b/PlutoWallet/Components/CustomLayouts/PlusItemView.xaml
@@ -4,8 +4,8 @@
              xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.CustomLayouts.PlusItemView"
              HeightRequest="60">
-    <card:Card IsTransparent="True">
-        <card:Card.View>
+    <card:ClickableCard IsTransparent="True">
+        <card:ClickableCard.View>
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                             AbsoluteLayout.LayoutFlags="All"
                             Margin="0, 10, 0, 10">
@@ -33,7 +33,7 @@
 
                 
             </AbsoluteLayout>
-        </card:Card.View>
-    </card:Card>
+        </card:ClickableCard.View>
+    </card:ClickableCard>
 </ContentView>
 
