--- a/PlutoWallet/Components/PredefinedLayouts/AwesomaAjunaAvatarsLayoutItem.xaml
+++ b/PlutoWallet/Components/PredefinedLayouts/AwesomaAjunaAvatarsLayoutItem.xaml
@@ -5,8 +5,8 @@
              xmlns:viewmodel="clr-namespace:PlutoWallet.Components.PredefinedLayouts"
              x:Class="PlutoWallet.Components.PredefinedLayouts.AwesomaAjunaAvatarsLayoutItem"
              HeightRequest="60">
-    <card:Card Color="#151411">
-        <card:Card.View>
+    <card:ClickableCard Color="#151411">
+        <card:ClickableCard.View>
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                             AbsoluteLayout.LayoutFlags="All"
                             Margin="0, 10, 0, 10">
@@ -50,7 +50,7 @@
                 </AbsoluteLayout>
                 
             </AbsoluteLayout>
-        </card:Card.View>
-    </card:Card>
+        </card:ClickableCard.View>
+    </card:ClickableCard>
 </ContentView>
 
