--- a/PlutoWallet/Components/PredefinedLayouts/GalaxyLogicGameLayoutItem.xaml
+++ b/PlutoWallet/Components/PredefinedLayouts/GalaxyLogicGameLayoutItem.xaml
@@ -4,8 +4,8 @@
              xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              x:Class="PlutoWallet.Components.PredefinedLayouts.GalaxyLogicGameLayoutItem"
              HeightRequest="60">
-    <card:Card Color="#222">
-        <card:Card.View>
+    <card:ClickableCard Color="#222">
+        <card:ClickableCard.View>
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                             AbsoluteLayout.LayoutFlags="All"
                             Margin="0, 10, 0, 10">
@@ -51,7 +51,7 @@
                 </AbsoluteLayout>
                 
             </AbsoluteLayout>
-        </card:Card.View>
-    </card:Card>
+        </card:ClickableCard.View>
+    </card:ClickableCard>
 </ContentView>
 
