--- a/PlutoWallet/Components/PredefinedLayouts/GenericPredefinedLayoutItem.xaml
+++ b/PlutoWallet/Components/PredefinedLayouts/GenericPredefinedLayoutItem.xaml
@@ -9,8 +9,8 @@
         <predefinedlayouts:GenericPredefinedLayoutItemViewModel />
 
     </ContentView.BindingContext>
-    <card:Card>
-        <card:Card.View>
+    <card:ClickableCard>
+        <card:ClickableCard.View>
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                             AbsoluteLayout.LayoutFlags="All"
                             Margin="0, 10, 0, 10">
@@ -69,7 +69,7 @@
                     </AbsoluteLayout.GestureRecognizers>
                 </AbsoluteLayout>
             </AbsoluteLayout>
-        </card:Card.View>
-    </card:Card>
+        </card:ClickableCard.View>
+    </card:ClickableCard>
 </ContentView>
 
