--- a/PlutoWallet/Components/Nft/NftThumbnailView.xaml
+++ b/PlutoWallet/Components/Nft/NftThumbnailView.xaml
@@ -35,7 +35,7 @@
                     <AbsoluteLayout>
 
                         <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
-                           x:Name="image" Aspect="AspectFill" />
+                               x:Name="image" Aspect="AspectFill" />
                     </AbsoluteLayout>
                 </Border>
 
@@ -58,7 +58,9 @@
                         </Label>
 
                         <Label TextType="Html" x:Name="descriptionLabel" TextColor="{AppThemeBinding Light=Black, Dark=White}"
-                               Margin="0, 0, 0, 50">
+                               Padding="0, 0, 0, 50"
+                               MaximumHeightRequest="{Binding Source={x:Reference border}, Path=Height}"
+                               >
                         </Label>
                     </StackLayout>
 
