--- a/PlutoWallet/Components/Nft/NftTitleView.xaml
+++ b/PlutoWallet/Components/Nft/NftTitleView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:card="clr-namespace:PlutoWallet.Components.Card"
              xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
+             xmlns:nft="clr-namespace:PlutoWallet.Components.Nft"
              x:Class="PlutoWallet.Components.Nft.NftTitleView"
              HeightRequest="90">
    <card:Card>
@@ -12,7 +13,7 @@
                             Margin="0, 10, 0, 10">
                 <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                                      AbsoluteLayout.LayoutFlags="SizeProportional"
-                                     Spacing="10">
+                                     Spacing="7.5">
                     <HorizontalStackLayout Spacing="10">
                         <Label HorizontalOptions="Start"
                                VerticalOptions="End"
@@ -20,7 +21,7 @@
                                 HorizontalTextAlignment="Center"
                                 FontSize="18"
                                 HeightRequest="20"
-                                Margin="10, 0, 0, 0"
+                                Margin="10, 2.5, 0, 0"
                                 >
                             <Label.FormattedText>
                                 <FormattedString>
@@ -31,24 +32,8 @@
                             </Label.FormattedText>
 
                         </Label>
-                        <Label HorizontalOptions="Start"
-                               VerticalOptions="End"
-                                VerticalTextAlignment="End"
-                                HorizontalTextAlignment="Start"
-                                FontSize="10"
-                                TextColor="#888888"
-                                HeightRequest="20"
-                                Margin="0, 0, 20, 0">
-                            <Label.FormattedText>
-                                <FormattedString>
-                                    <Span Text="{Binding CollectionId}" />
-                                    <Span Text=" - " />
-                                    <Span Text="{Binding ItemId}" />
-                                </FormattedString>
-
-                            </Label.FormattedText>
-
-                        </Label>
+                        <nft:NftIdView Id="{Binding ItemId}"
+                                       CollectionId="{Binding CollectionId}" />
                     </HorizontalStackLayout>
 
                     
